--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,7 @@
     --clr-dark-grayish-blue: hsl(236, 13%, 42%);
     --clr--dark-blue: hsl(240, 100%, 5%);
     --ff-secondary: 'Inter', sans-serif;
-    --radius: 0.250rem;
-    --radius-1: .50rem;
-    --spacing: 0.3rem;
-    --max-width: 1170px;
-    --fixed-width: 620px;
-    --transition: all 0.3s linear;
+    --spacing: 0.2rem;
 }
 /* =============== Global Styles =============== */
 
@@ -35,11 +30,10 @@ ul {
     letter-spacing: var(--spacing);
     text-transform: capitalize;
     line-height: 1.25;
-    margin-bottom: 0.75rem;
     font-family: var(--ff-primary);
   }
   h1 {
-    font-size: 3rem;
+    font-size: 3.5rem;
     
   }
   h2 {
@@ -47,31 +41,42 @@ ul {
     color: var(--clr-primary-soft-orange);
   }
   h3 {
-    font-size: 1.25rem;
+    font-size: 2.5rem;
     color: var(--clr-dark-grayish-blue);
   }
   h4 {
-    font-size: 0.875rem;
+    font-size: 1rem;
     color: var(--clr-off-white);
   }
+  h5 {
+    font-size: 1.05rem;
+  }
   p {
-    margin-bottom: 1.25rem;
+    font-size: 1.15rem;
+    font-weight: 500;
     color: var(--clr-dark-grayish-blue);
   }
+  hr{
+    margin: 0.125rem 0;
+}
+
   @media screen and (min-width: 800px) {
     h1 {
       font-size: 3rem;
+      height: 100%;
     }
     h2 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
+      font-size: 2.0rem;
     }
     h3 {
       font-size: 1.75rem;
     }
     h4 {
-      font-size: 0.7125rem;
-      margin-bottom: 1rem;
+      font-size: 0.7rem;
+      font-weight: 800;
+    }
+    hr{
+        margin: 0.85rem 0;
     }
     body {
       font-size: 1.3rem;
@@ -84,6 +89,12 @@ ul {
     h4,p {
       line-height: 1.2;
     }
+    h5 {
+        font-size: 1.0rem;
+      }
+      p {
+        font-size: 0.90rem;
+      }
   }  
 body {
     font-family: var(--ff-secondary);
@@ -96,16 +107,15 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    padding: 1rem;
+    padding: 2rem;
     width : 100%;
 }
 section{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(9,minmax(0,1fr));
+    grid-template-rows: repeat(10,minmax(0,1fr));
     gap:1.2rem;
-    margin-top:1rem ;
-    
+    margin:1rem 0;  
 }
 .nav-header{
     display: flex;
@@ -114,7 +124,6 @@ section{
     color: var(--clr-white);
     align-items: center;
     justify-content: space-between;
-   /* align-content: space-around;*/
     width: 100%;
     z-index:100;
 }
@@ -152,9 +161,7 @@ section{
     flex-direction: column;
     gap:1.2rem;
     color: var(--clr-black);
-    font-size: 1.1rem;
-    
-    
+    font-size: 1.1rem;  
 }
  .men{
     display:none ;
@@ -190,7 +197,6 @@ section{
   position: absolute;
   top: 0;
   left: 0;
- /* z-index: -1;*/
 }
 .desktop{   
     display: none;
@@ -198,8 +204,18 @@ section{
 .new-container{
     background-color: var(--clr--dark-blue);
     grid-column: span 1;
-    grid-row: span 2;
-    padding: 1.5rem;
+    grid-row: span 3;
+    grid-row-start: 5;
+    grid-row-end: 8;
+    padding: 2rem;
+    flex-grow: 1;
+    height: 100%;
+}
+.news-content{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 .web-container{
     grid-column: span 1;
@@ -207,12 +223,13 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 .evolution-container{
     grid-row: span 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: flex-start;
 }
 .btn{
@@ -228,11 +245,18 @@ section{
     grid-row: span 1;
     display: flex;
     gap:1rem;
-    margin-top:1.2rem ;
+    margin-top:0rem ;
+    align-items: flex-start;
+}
+.num-num-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 90%;
 }
 .num-container img{
-    max-width: 25%;
-    max-height: 60%;
+    min-width: 35%;
+    min-height: 90%;
 }
 @media screen and (min-width: 800px) {
     body {
@@ -242,10 +266,9 @@ section{
         padding: 2rem
     }
     section{
-        display: grid;
         grid-template-columns: repeat(3,minmax(0,1fr));
         grid-template-rows: repeat(3,minmax(0,1fr));
-        min-height: 85vh;
+        height: 75vh;
     }
     .nav-header{
         gap:2.5rem;
@@ -265,7 +288,6 @@ section{
         cursor: pointer;
         justify-content: flex-end;
     }
-    
     .logo{
         font-size: 1.6rem;
     }
@@ -287,11 +309,14 @@ section{
         position: absolute;
         top: 0;
         left: 0;
-        /*z-index: -1;*/
     }
     .new-container{
         grid-row: span 2;
         grid-column: span 1;
+        padding: 1.5rem;
+    }
+    .news-content{
+        height: 100%;
     }
     .web-container{
         grid-row: span 1;
@@ -304,8 +329,12 @@ section{
     .num-container{
         grid-row: span 1;
         grid-column: span 1;
+        margin-top:1.2rem ;
     } 
-  
+    .num-container img{
+        min-width: 40%;
+        min-height: 90%;
+    }
 }
 .attribution {
     font-size: 16px; 
@@ -314,7 +343,7 @@ section{
     left: 50%;
     bottom: 0px;
     transform: translateX(-50%);
-    width: 80%;
+    width: 100%;
 }
 .attribution a { 
    color: hsl(228, 45%, 44%); 
